[package]
name = "esscli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0.72"
serde_json = "1.0.104"
serde = { version = "1.0", features = ["derive"] }
url = "2.4.0"
dirs = "5.0.1"
prettytable-rs = "0.10.0"
toml = "0.7.6"